--- a/erb_templates/vsphere/stemcell.MF.erb
+++ b/erb_templates/vsphere/stemcell.MF.erb
@@ -1,11 +1,11 @@
 name: bosh-vsphere-esxi-windows-2012R2-go_agent
-version: '<%= @version %>'
+version: <%= @version %>
 bosh_protocol: 1
-sha1: '<%= @sha1 %>'
+sha1: <%= @sha1 %>
 operating_system: windows
 cloud_properties:
   name: bosh-vsphere-esxi-windows-2012R2-go_agent
-  version: '<%= @version %>'
+  version: <%= @version %>
   infrastructure: vsphere
   hypervisor: esxi
   disk: 3072
