Use the same OS type for stemcells
This will fix the vsphere exception in bosh-windows-generator
https://github.com/greenhouse-org/bosh-windows-generator/blob/701457a1064f550f6e80810fa2b3e82c30834ad6/generate_manifest.rb#L50

--- a/erb_templates/vsphere/stemcell.MF.erb
+++ b/erb_templates/vsphere/stemcell.MF.erb
@@ -2,7 +2,7 @@ name: bosh-vsphere-esxi-windows-2012R2-go_agent
 version: <%= @version %>
 bosh_protocol: 1
 sha1: <%= @sha1 %>
-operating_system: windows
+operating_system: windows2012R2
 cloud_properties:
   name: bosh-vsphere-esxi-windows-2012R2-go_agent
   version: <%= @version %>
