--- a/erb_templates/aws/stemcell.MF.erb
+++ b/erb_templates/aws/stemcell.MF.erb
@@ -4,5 +4,6 @@ version: '<%= @version %>'
 sha1: ba07a5f8277b3f9e6b8f250aeea4ebad4244b273
 operating_system: windows2012R2
 cloud_properties:
+  infrastructure: aws
   ami:
     us-east-1: <%= @ami_id %>
