--- a/erb_templates/aws/packer.json.erb
+++ b/erb_templates/aws/packer.json.erb
@@ -25,8 +25,10 @@
       {
           "type": "powershell",
           "scripts": [
+            "../scripts/add-windows-features.ps1",
             "../scripts/setup_agent.ps1",
             "scripts/agent_config.ps1",
+            "../scripts/cleanup-windows-features.ps1",
             "scripts/ec2-set-password.ps1"
           ],
           "environment_vars": [
