--- a/erb_templates/aws/stemcell.MF.erb
+++ b/erb_templates/aws/stemcell.MF.erb
@@ -2,7 +2,7 @@
 name: bosh-aws-xen-hvm-windows-stemcell-go_agent
 version: '<%= @version %>'
 sha1: ba07a5f8277b3f9e6b8f250aeea4ebad4244b273
-operating_system: windows2012R2
+operating_system: '<%= @os_version %>'
 cloud_properties:
   infrastructure: aws
   ami:<% @amis.each do |i| %>
