Use a strict security_group when starting packer
Allowing Access from concourse worker only

[#135778649]

Signed-off-by: Amin Jamali <ajamali@pivotal.io>

--- a/erb_templates/aws/packer.json.erb
+++ b/erb_templates/aws/packer.json.erb
@@ -16,6 +16,7 @@
       "communicator": "winrm",
       "winrm_username": "Administrator",
       "user_data_file": "setup_winrm.txt",
+      "security_group_id": "<%= @security_group_id %>",
       "ami_groups": "all"
     }<%= ',' if i < (@regions.size - 1) %>
   <% end %>
