--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -21,7 +21,7 @@
   "provisioners": [
       {
         "type": "file",
-        "source": "agent-dependencies.zip",
+        "source": "<%= @agent_deps_path %>",
         "destination": "C:\\bosh\\agent_deps.zip"
       },
       {
