Disable winrm at end of stemcell generation
[#136061713]

Signed-off-by: Natalie Arellano <narellano@pivotal.io>

--- a/erb_templates/aws/packer.json.erb
+++ b/erb_templates/aws/packer.json.erb
@@ -35,7 +35,8 @@
             "../scripts/setup_agent.ps1",
             "scripts/agent_config.ps1",
             "../scripts/cleanup-windows-features.ps1",
-            "scripts/ec2-set-password.ps1"
+            "scripts/ec2-set-password.ps1",
+            "../scripts/disable-winrm.ps1"
           ],
           "environment_vars": [
             "AGENT_ZIP_URL=<%= @agent_url %>"
