--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -30,7 +30,8 @@
             "../scripts/add-windows-features.ps1",
             "../scripts/setup_agent.ps1",
             "scripts/agent_config.ps1",
-            "../scripts/cleanup-windows-features.ps1"
+            "../scripts/cleanup-windows-features.ps1",
+            "../scripts/disable-winrm.ps1"
           ],
           "environment_vars": [
             "AGENT_ZIP_URL=<%= @agent_url %>"
