--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -13,7 +13,7 @@
       "machine_type": "n1-standard-4",
       "omit_external_ip": false,
       "communicator": "winrm",
-      "winrm_username": "winrmuser",
+      "winrm_username": "Administrator",
       "winrm_use_ssl": false
     }
   ],
