Increase winrm concurrency
Signed-off-by: David Jahn <djahn@pivotal.io>

--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -20,6 +20,16 @@
 
   "provisioners": [
       {
+        "type": "powershell",
+        "inline": [
+          "winrm set winrm/config/winrs '@{MaxShellsPerUser=\"100\"}'",
+          "winrm set winrm/config/winrs '@{MaxConcurrentUsers=\"30\"}'",
+          "winrm set winrm/config/winrs '@{MaxProcessesPerShell=\"100\"}'",
+          "winrm set winrm/config/winrs '@{MaxMemoryPerShellMB=\"1024\"}'",
+          "winrm set winrm/config/service '@{MaxConcurrentOperationsPerUser=\"5000\"}'"
+        ]
+      },
+      {
         "type": "file",
         "source": "<%= @agent_deps_path %>",
         "destination": "C:\\bosh\\agent_deps.zip"
