Set default firewall policy via script
Instead of relying on the group policy (only for vSphere) and then the
pre-start scripts for garden, set the base expected policy in the
stemcell and apply changes on top.

Signed-off-by: Matthew Horan <mhoran@pivotal.io>

--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -41,7 +41,8 @@
             "../scripts/setup_agent.ps1",
             "scripts/agent_config.ps1",
             "../scripts/cleanup-windows-features.ps1",
-            "../scripts/disable-winrm.ps1"
+            "../scripts/disable-winrm.ps1",
+            "../scripts/set-firewall.ps1"
           ],
           "environment_vars": [
             "AGENT_ZIP_URL=<%= @agent_url %>"
