--- a/erb_templates/aws/packer.json.erb
+++ b/erb_templates/aws/packer.json.erb
@@ -36,7 +36,8 @@
             "scripts/agent_config.ps1",
             "../scripts/cleanup-windows-features.ps1",
             "scripts/ec2-set-password.ps1",
-            "../scripts/disable-winrm.ps1"
+            "../scripts/disable-winrm.ps1",
+            "../scripts/set-firewall.ps1"
           ],
           "environment_vars": [
             "AGENT_ZIP_URL=<%= @agent_url %>"
