packer builder no longer downloads bosh-agent

--- a/erb_templates/aws/packer.json.erb
+++ b/erb_templates/aws/packer.json.erb
@@ -25,8 +25,13 @@
   "provisioners": [
       {
         "type": "file",
+        "source": "agent.zip",
+        "destination": "C:\\bosh\\agent.zip"
+      },
+      {
+        "type": "file",
         "source": "agent-dependencies.zip",
-        "destination": "C:\\bosh\\agent_deps.zip"
+        "destination": "C:\\bosh\\agent-dependencies.zip"
       },
       {
           "type": "powershell",
@@ -38,9 +43,6 @@
             "scripts/ec2-set-password.ps1",
             "../scripts/disable-winrm.ps1",
             "../scripts/set-firewall.ps1"
-          ],
-          "environment_vars": [
-            "AGENT_ZIP_URL=<%= @agent_url %>"
           ]
       }
   ]
