--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -31,12 +31,12 @@
       },
       {
         "type": "file",
-        "source": "agent.zip",
+        "source": "../../compiled-agent/agent.zip",
         "destination": "C:\\bosh\\agent.zip"
       },
       {
         "type": "file",
-        "source": "agent-dependencies.zip",
+        "source": "../../compiled-agent/agent-dependencies.zip",
         "destination": "C:\\bosh\\agent-dependencies.zip"
       },
       {
@@ -47,7 +47,8 @@
             "scripts/agent_config.ps1",
             "../scripts/cleanup-windows-features.ps1",
             "../scripts/disable-winrm.ps1",
-            "../scripts/set-firewall.ps1"
+            "../scripts/set-firewall.ps1",
+            "../scripts/cleanup-artifacts.ps1"
           ]
       }
   ]
