Disable IIS Web Server
[#136455785]

Signed-off-by: Amin Jamali <ajamali@pivotal.io>

--- a/erb_templates/aws/packer.json.erb
+++ b/erb_templates/aws/packer.json.erb
@@ -41,7 +41,7 @@
             "scripts/agent_config.ps1",
             "../scripts/cleanup-windows-features.ps1",
             "scripts/ec2-set-password.ps1",
-            "../scripts/disable-winrm.ps1",
+            "../scripts/disable-services.ps1",
             "../scripts/set-firewall.ps1",
             "../scripts/cleanup-artifacts.ps1"
           ]
