--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -46,7 +46,7 @@
             "../scripts/setup_agent.ps1",
             "scripts/agent_config.ps1",
             "../scripts/cleanup-windows-features.ps1",
-            "../scripts/disable-winrm.ps1",
+            "../scripts/disable-services.ps1",
             "../scripts/set-firewall.ps1",
             "../scripts/cleanup-artifacts.ps1"
           ]
