--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -5,7 +5,7 @@
       "account_file": "<%= @account_json_file %>",
       "project_id": "<%= @project_id %>",
       "tags": ["winrm"],
-      "source_image": "windows-2012-r2-winrm",<%# windows-server-2012-r2-dc-v20161115 %>
+      "source_image": "windows-server-2012-r2-dc-v20170117",
       "image_family": "windows-2012-r2",
       "zone": "us-east1-c",
       "disk_size": 50,
@@ -14,7 +14,10 @@
       "omit_external_ip": false,
       "communicator": "winrm",
       "winrm_username": "winrmuser",
-      "winrm_use_ssl": false
+      "winrm_use_ssl": false,
+      "metadata": {
+        "sysprep-specialize-script-url": "https://raw.githubusercontent.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/master/scripts/gcp-setup-winrm.ps1"
+      }
     }
   ],
 
