Use latest windows-server-2012 image from GCP
[#140360055]

Signed-off-by: Mark DeLillo <mdelillo@pivotal.io>

--- a/erb_templates/gcp/packer.json.erb
+++ b/erb_templates/gcp/packer.json.erb
@@ -5,7 +5,7 @@
       "account_file": "<%= @account_json_file %>",
       "project_id": "<%= @project_id %>",
       "tags": ["winrm"],
-      "source_image": "windows-server-2012-r2-dc-v20170117",
+      "source_image": "<%= @image_name %>",
       "image_family": "windows-2012-r2",
       "zone": "us-east1-c",
       "disk_size": 50,
