--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -28,6 +28,11 @@
   },
   {
     "type": "windows-restart",
+   "restart_command": "powershell.exe -Command Remove-DockerPackage",
+   "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
+  },
+  {
+    "type": "windows-restart",
     "restart_command": "powershell.exe -Command Install-CFFeatures",
     "restart_timeout": "1h"
   },
