Updating packer restart commands to include restart checks and timouts
[#160270298](https://www.pivotaltracker.com/story/show/160270298)

Signed-off-by: Kenny DuMez <kdumez@pivotal.io>

--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -29,11 +29,13 @@
   {
     "type": "windows-restart",
    "restart_command": "powershell.exe -Command Remove-DockerPackage",
+    "restart_timeout": "1h",
    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
   },
   {
     "type": "windows-restart",
     "restart_command": "powershell.exe -Command Install-CFFeatures",
+    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\"",
     "restart_timeout": "1h"
   },
   {
@@ -55,7 +57,8 @@
   {
     "type": "windows-restart",
     "restart_command": "powershell.exe -Command Wait-WindowsUpdates -Password <%= password %> -User Provisioner",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
   },
   {
     "type": "powershell",
