--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -53,7 +53,8 @@
   {
     "type": "windows-restart",
     "restart_command": "powershell.exe -Command Wait-WindowsUpdates -Password <%= password %> -User Provisioner",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
   },
   {
     "type": "powershell",
