Fix flakiness with building 2012R2 GCP stemcell
Our 2012R2 create GCP stemcell job can be flaky at times. We find that
the build will break while uploading the bosh modules, or trying to
install them, or trying to create the Provisioner user account. Based on
our investigation, it appears that packer sometimes tries to execute the
next provision before the current one is done.

As such, we added some provision pauses before executing the next
provision.

[#161899385]

Signed-off-by: Gab Satchi <gsatchithanantham@pivotal.io>
Co-authored-by: Gab Satchi <gsatchithanantham@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -2,19 +2,22 @@
   {
     "type": "file",
     "source": "build/bosh-psmodules.zip",
-    "destination": "C:\\provision\\bosh-psmodules.zip"
+    "destination": "C:\\provision\\bosh-psmodules.zip",
+    "pause_before": "60s"
   },
   {
     "type": "file",
     "source": "scripts/install-bosh-psmodules.ps1",
-    "destination": "C:\\provision\\install-bosh-psmodules.ps1"
+    "destination": "C:\\provision\\install-bosh-psmodules.ps1",
+    "pause_before": "60s"
   },
   {
     "type": "powershell",
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "C:\\provision\\install-bosh-psmodules.ps1"
-    ]
+    ],
+    "pause_before": "60s"
   },
   {
     "type": "powershell",
@@ -40,7 +43,8 @@
       "Upgrade-PSVersion"
     ],
     "elevated_user": "Provisioner",
-    "elevated_password": "<%= password %>"
+    "elevated_password": "<%= password %>",
+    "pause_before": "30s"
   },
   {
     "type": "windows-restart"
