--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -33,16 +33,28 @@
     ]
   },
   {
-    "type": "windows-restart",
-   "restart_command": "powershell.exe -Command Remove-DockerPackage",
-    "restart_timeout": "1h",
-   "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Remove-DockerPackage"
+    ]
   },
   {
     "type": "windows-restart",
-    "restart_command": "powershell.exe -Command Install-CFFeatures",
-    "restart_timeout": "1h",
-    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
+    "restart_timeout": "1h"
+  },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Install-CFFeatures"
+    ]
+  },
+  {
+    "type": "windows-restart",
+    "restart_timeout": "1h"
   },
   <% if install_windows_updates %>
   {
@@ -62,10 +74,16 @@
     ]
   },
   {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Wait-WindowsUpdates -Password <%= password %> -User Provisioner"
+    ]
+  },
+  {
     "type": "windows-restart",
-    "restart_command": "powershell.exe -Command Wait-WindowsUpdates -Password <%= password %> -User Provisioner",
-    "restart_timeout": "12h",
-    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
