--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -74,10 +74,16 @@
     ]
   },
   {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Wait-WindowsUpdates -Password <%= password %> -User Provisioner"
+    ]
+  },
+  {
     "type": "windows-restart",
-    "restart_command": "powershell.exe -Command Wait-WindowsUpdates -Password <%= password %> -User Provisioner",
-    "restart_timeout": "12h",
-    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
