Fix handling of proxy settings in provisioners
- Don't call Set-ProxySettings or Clear-ProxySettings when no proxy parameters are given
- Call Set-ProxySettings with parameters in quotations

[#162209414]

Co-authored-by: Malini Valliath <mvalliath@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -19,6 +19,7 @@
     ],
     "pause_before": "60s"
   },
+  <% if proxy_settings != '' %>
   {
     "type": "powershell",
     "inline": [
@@ -27,6 +28,7 @@
       "Set-ProxySettings <%= proxy_settings %>"
     ]
   },
+  <% end %>
   {
     "type": "powershell",
     "inline": [
@@ -220,6 +222,7 @@
       "Disable-DCOM"
     ]
   },
+<% if proxy_settings != '' %>
   {
     "type": "powershell",
     "inline": [
@@ -228,6 +231,7 @@
       "Clear-ProxySettings"
     ]
   },
+<% end %>
   {
     "type": "powershell",
     "inline": [
