--- a/lib/packer/config/templates/provision_windows2016.json.erb
+++ b/lib/packer/config/templates/provision_windows2016.json.erb
@@ -16,6 +16,7 @@
       "C:\\provision\\install-bosh-psmodules.ps1"
     ]
   },
+  <% if proxy_settings != '' %>
   {
     "type": "powershell",
     "inline": [
@@ -24,6 +25,7 @@
       "Set-ProxySettings <%= proxy_settings %>"
     ]
   },
+  <% end %>
   {
     "type": "powershell",
     "inline": [
@@ -181,6 +183,7 @@
       "Disable-3DES"
     ]
   },
+<% if proxy_settings != '' %>
   {
     "type": "powershell",
     "inline": [
@@ -189,6 +192,7 @@
       "Clear-ProxySettings"
     ]
   },
+<% end %>
   {
     "type": "powershell",
     "inline": [
