Start sshd and agent service on system restart
On start, sshd will create a few new key-pairs if not already present
We don't want to ship this key-pair as part of our stemcell hence
we added a remove keys function right befor sysprep of vm

[#160462793](https://www.pivotaltracker.com/story/show/160462793)
 Enable `bosh ssh` by default for deployed all stemcell OS VMs for all IaaSes

--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -235,6 +235,14 @@
   {
     "type": "powershell",
     "inline": [
+       "$ErrorActionPreference = \"Stop\";",
+       "trap { $host.SetShouldExit(1) }",
+       "Remove-SSHKeys"
+     ]
+  },
+  {
+    "type": "powershell",
+    "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
       "Clear-Provisioner"
