--- a/lib/packer/config/templates/provision_windows2019.json.erb
+++ b/lib/packer/config/templates/provision_windows2019.json.erb
@@ -204,6 +204,14 @@
   {
     "type": "powershell",
     "inline": [
+       "$ErrorActionPreference = \"Stop\";",
+       "trap { $host.SetShouldExit(1) }",
+       "Remove-SSHKeys"
+     ]
+  },
+  {
+    "type": "powershell",
+    "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
       "Clear-Provisioner"
