--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -222,6 +222,14 @@
       "Disable-DCOM"
     ]
   },
+  {
+    "type": "powershell",
+        "inline": [
+        "$ErrorActionPreference = \"Stop\";",
+        "trap { $host.SetShouldExit(1) }",
+        "Get-WUCerts"
+      ]
+  },
 <% if proxy_settings != '' %>
   {
     "type": "powershell",
