--- a/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
@@ -84,6 +84,14 @@
       "Test-InstalledUpdates"
     ]
   },
+  {
+    "type": "powershell",
+        "inline": [
+        "$ErrorActionPreference = \"Stop\";",
+        "trap { $host.SetShouldExit(1) }",
+        "Get-WUCerts"
+      ]
+  },
 <% if proxy_settings != '' %>
   {
     "type": "powershell",
