--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -2,19 +2,22 @@
   {
     "type": "file",
     "source": "build/bosh-psmodules.zip",
-    "destination": "C:\\provision\\bosh-psmodules.zip"
+    "destination": "C:\\provision\\bosh-psmodules.zip",
+    "pause_before": "60s"
   },
   {
     "type": "file",
     "source": "scripts/install-bosh-psmodules.ps1",
-    "destination": "C:\\provision\\install-bosh-psmodules.ps1"
+    "destination": "C:\\provision\\install-bosh-psmodules.ps1",
+    "pause_before": "60s"
   },
   {
     "type": "powershell",
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "C:\\provision\\install-bosh-psmodules.ps1"
-    ]
+    ],
+    "pause_before": "60s"
   },
   <% if proxy_settings != '' %>
   {
