Re-enable SSH installation for 2012R2
Installation now makes no attempt to enable SSH

[#160462793]

--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -125,6 +125,14 @@
     "destination": "C:\\provision\\OpenSSH-Win64.zip"
   },
   {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Install-SSHD -SSHZipFile 'C:\\provision\\OpenSSH-Win64.zip'"
+    ]
+  },
+  {
     "type": "file",
     "source": "../windows-stemcell-dependencies/lgpo/LGPO.exe",
     "destination": "C:\\windows\\LGPO.exe"
