Enable SSHD as separate provisioner step
- For all OS versions, other than 2012R2

[#160462793]

--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -129,6 +129,14 @@
     ]
   },
   {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Enable-SSHD"
+    ]
+  },
+  {
     "type": "file",
     "source": "../windows-stemcell-dependencies/lgpo/LGPO.exe",
     "destination": "C:\\windows\\LGPO.exe"
