Add version file to stemcells for all versions and IaaS
Allows users to get stemcell version from the VM instead of the BOSH
director, as not all users have access to BOSH director.

[#153570086](https://www.pivotaltracker.com/story/show/153570086)
 Add stemcell version to `/var/vcap/bosh/etc/stemcell_version`

Co-authored-by: George Gelashvili <ggelashvili+cf@pivotal.io>

--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -159,6 +159,15 @@
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
+      "New-Item 'C:\\var\\vcap\\bosh\\etc' -ItemType 'directory'",
+      "New-Item -Path 'C:\\var\\vcap\\bosh\\etc\\stemcell_version' -ItemType 'file' -Value '<%= stemcell_version %>'"
+    ]
+  },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
       "Disable-RC4"
     ]
   },
