Use extracted New-VersionFile function
to add version in stemcells across all OSes and IaaSes

[#153570086](https://www.pivotaltracker.com/story/show/153570086)
 Add stemcell version to `/var/vcap/bosh/etc/stemcell_version`

Co-authored-by: George Gelashvili <ggelashvili+cf@pivotal.io>

--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -159,7 +159,7 @@
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
-      "New-VersionFile -Version"
+      "New-VersionFile -Version '<%= stemcell_version %>'"
     ]
   },
   {
