Revert "Remove the optimize-disk step from 2012R2 from packer config"
So that we can Optimize-Disk once more!

This reverts commit 5356f93d7af6f17b6130fc3c00873e014b4bb1de.

--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -262,6 +262,14 @@
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
+      "Optimize-Disk"
+    ]
+  },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
       "Compress-Disk"
     ]
   }
