Print hotfixes in provisioners and download to host
pairing w Nick Smith. thanks duet

--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -103,6 +103,20 @@
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
+      "Get-HotFix > hotfixes.log"
+    ]
+  },
+  {
+    "type": "file",
+    "source": "hotfixes.log",
+    "destination": "hotfixes.log",
+    "direction": "download"
+  },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
       "Remove-Account -User Provisioner"
     ]
   },
