--- a/lib/packer/config/templates/provision_windows2019.json.erb
+++ b/lib/packer/config/templates/provision_windows2019.json.erb
@@ -224,6 +224,14 @@
         "Get-WUCerts"
       ]
   },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Enable-Hyper-V"
+    ]
+  },
 <% if proxy_settings != '' %>
   {
     "type": "powershell",
