restart after installing CFF features
[#166858609](https://www.pivotaltracker.com/story/show/166858609)
 2012R2/create-azure has failed

Co-authored-by: Jackson Feeny <jfeeny@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -68,6 +68,10 @@
     ]
   },
   {
+    "type": "windows-restart",
+    "restart_timeout": "12h"
+  },
+  {
     "type": "powershell",
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
