--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -49,7 +49,8 @@
     "pause_before": "30s"
   },
   {
-    "type": "windows-restart"
+    "type": "windows-restart",
+    "check_registry": true
   },
   {
     "type": "powershell",
@@ -69,7 +70,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "check_registry": true
   },
   {
     "type": "powershell",
@@ -89,7 +91,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "check_registry": true
   },
   {
     "type": "powershell",
