--- a/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
@@ -58,7 +58,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "check_registry": true
   },
   {
     "type": "powershell",
