--- a/lib/packer/config/templates/provision_windows2016.json.erb
+++ b/lib/packer/config/templates/provision_windows2016.json.erb
@@ -47,7 +47,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "1h"
+    "restart_timeout": "1h",
+    "check_registry": true
   },
   {
     "type": "powershell",
@@ -59,7 +60,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "1h"
+    "restart_timeout": "1h",
+    "check_registry": true
   },
   <% if install_windows_updates %>
   {
@@ -88,7 +90,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "check_registry": true
   },
   {
     "type": "powershell",
