Revert "add check_registry => true to our provisioners"
This reverts commit a8dd036049471fa824ec97dd4a28a3a12545bd5e.

--- a/lib/packer/config/templates/provision_windows1803.json.erb
+++ b/lib/packer/config/templates/provision_windows1803.json.erb
@@ -47,8 +47,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "1h",
-    "check_registry": true
+    "restart_timeout": "1h"
   },
   {
     "type": "powershell",
@@ -60,8 +59,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "1h",
-    "check_registry": true
+    "restart_timeout": "1h"
   },
   <% if install_windows_updates %>
   {
@@ -90,8 +88,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h",
-    "check_registry": true
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
