--- a/lib/packer/config/templates/provision_windows2012R2.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2.json.erb
@@ -49,8 +49,7 @@
     "pause_before": "30s"
   },
   {
-    "type": "windows-restart",
-    "check_registry": true
+    "type": "windows-restart"
   },
   {
     "type": "powershell",
@@ -70,8 +69,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h",
-    "check_registry": true
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
@@ -91,8 +89,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h",
-    "check_registry": true
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
