--- a/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
@@ -58,8 +58,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h",
-    "check_registry": true
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
