--- a/lib/packer/config/templates/provision_windows2019.json.erb
+++ b/lib/packer/config/templates/provision_windows2019.json.erb
@@ -47,8 +47,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "1h",
-    "check_registry": true
+    "restart_timeout": "1h"
   },
   {
     "type": "powershell",
@@ -68,8 +67,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "1h",
-    "check_registry": true
+    "restart_timeout": "1h"
   },
   <% if install_windows_updates %>
   {
@@ -98,8 +96,7 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h",
-    "check_registry": true
+    "restart_timeout": "12h"
   },
   {
     "type": "powershell",
