Add Internet Explorer registry changes
[#167407675](https://www.pivotaltracker.com/story/show/167407675)
As a platform engineer I want to see Internet Explorer-based policies that comply with MSFT Baseline Security Standard - 20193

Co-authored-by: Daniel Basner <dbasner@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2019.json.erb
+++ b/lib/packer/config/templates/provision_windows2019.json.erb
@@ -258,6 +258,14 @@
       "Clear-Provisioner"
     ]
   },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Set-InternetExplorerRegistries"
+    ]
+  },
   <% if iaas == "vsphere" %>
   {
     "type": "powershell",
