--- a/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
+++ b/lib/packer/config/templates/provision_windows2012R2_vsphere_updates.json.erb
@@ -58,7 +58,8 @@
   },
   {
     "type": "windows-restart",
-    "restart_timeout": "12h"
+    "restart_timeout": "12h",
+    "check_registry": true
   },
   {
     "type": "powershell",
@@ -120,6 +121,7 @@
     "type": "windows-restart",
     "restart_command": "powershell.exe -Command Start-Sleep -Seconds 900; Restart-Computer -Force",
     "restart_timeout": "1h",
-    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\""
+    "restart_check_command": "powershell -command \"& {Write-Output \'restarted.\'}\"",
+    "check_registry": true
   }
 ]
