WIP Add tests and consolidated provisioners
[#](https://www.pivotaltracker.com/story/show/)

Co-authored-by: George Gelashvili <ggelashvili+cf@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2019_consolidated.json.erb
+++ b/lib/packer/config/templates/provision_windows2019_consolidated.json.erb
@@ -1,1 +1,16 @@
-[]
+[
+  {
+    "type": "file",
+    "source": "build/assets.zip",
+    "destination": "C:\\provision\\assets.zip",
+    "pause_before": "60s"
+  },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
+      "Run-ProvisionerOne"
+    ]
+  }
+]
