added import script
Co-authored-by: Sam Coward <scoward@pivotal.io>
Co-authored-by: Flora Gallina-Jones <fgallinajones@pivotal.io>
Co-authored-by: George Gelashvili <ggelashvili+cf@pivotal.io>
Co-authored-by: Daniel Basner <dbasner@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2019_consolidated.json.erb
+++ b/lib/packer/config/templates/provision_windows2019_consolidated.json.erb
@@ -10,6 +10,15 @@
     "inline": [
       "$ErrorActionPreference = \"Stop\";",
       "trap { $host.SetShouldExit(1) }",
+      "Expand-Archive C:\\provision\\assets.zip",
+      "Import-And-Run-ProvisionerOne.ps1"
+    ]
+  },
+  {
+    "type": "powershell",
+    "inline": [
+      "$ErrorActionPreference = \"Stop\";",
+      "trap { $host.SetShouldExit(1) }",
       "Run-ProvisionerOne"
     ]
   }
