changing packer template to consume LGPO binary from curl resource
rather than depend on private dependencies repo

[#172135935](https://www.pivotaltracker.com/story/show/172135935)
 As a member of the pcf-eagle team I can create my own AWS stemcells using a functional AWS pipeline

Co-authored-by: Flora Gallina-Jones <fgallinajones@pivotal.io>

--- a/lib/packer/config/templates/provision_windows2019.json.erb
+++ b/lib/packer/config/templates/provision_windows2019.json.erb
@@ -163,7 +163,7 @@
   },
   {
     "type": "file",
-    "source": "../windows-stemcell-dependencies/lgpo/LGPO.exe",
+    "source": "../lgpo-binary/LGPO.exe",
     "destination": "C:\\windows\\LGPO.exe"
   },
   {
