update LGPO binary location
- LGPO was updated to V3, the structure of release zip changed causing
the path of the binary inside the zip to change as well.

[#174712910](https://www.pivotaltracker.com/story/show/174712910)
 Update pipeline to work with the latest LGPO.zip

--- a/lib/packer/config/templates/provision_windows2019.json.erb
+++ b/lib/packer/config/templates/provision_windows2019.json.erb
@@ -155,7 +155,7 @@
   },
   {
     "type": "file",
-    "source": "../lgpo-binary/LGPO.exe",
+    "source": "../lgpo-binary/LGPO_30/LGPO.exe",
     "destination": "C:\\windows\\LGPO.exe"
   },
   {
